--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.2"
+    "react-router": "^7.6.2",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
