--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "better-react-mathjax": "^2.3.0",
     "bootstrap": "^5.3.8",
+    "lucide-react": "^0.548.0",
     "mathlive": "^0.107.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.6.2",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
